# LPModel

./: .gitignore  CMakeLists.txt  clp-solver.cpp  export-lp.cpp  export-penalty.cpp  export-qp.cpp  generate-initial-shapes.cpp  generate-solution.cpp  main-old.cpp  main.cpp  optim.py  setUp.sh  temp.lp  temp.sol
CApplications/create-ODR-image/: CMakeLists.txt  create-ODR-image.cpp
CApplications/create-ODR-image/include/: InputReader.h
CApplications/export-cplex-lp/: CMakeLists.txt  export-cplex-lp.cpp
CApplications/export-cplex-lp/include/: InputData.h  InputReader.h
CApplications/export-cplex-lp/src/: InputReader.cpp
CApplications/export-cplex-qp/: CMakeLists.txt  export-cplex-qp.cpp
CApplications/export-cplex-qp/include/: InputData.h  InputReader.h
CApplications/export-cplex-qp/src/: InputReader.cpp
CApplications/export-cvxopt/: CMakeLists.txt  export-cvxopt.cpp
CApplications/export-cvxopt/include/: InputData.h  InputReader.h  PythonExporter.h
CApplications/export-cvxopt/src/: PythonExporter.cpp
CApplications/nonlinopt/: CMakeLists.txt  minimal-code-adept.cpp  nonlinopt.cpp
CApplications/nonlinopt/include/LPModel/nonlinopt/: MinimizerAR.h
app/CApplications/create-ODR-image/: CMakeLists.txt  create-ODR-image.cpp
app/CApplications/create-ODR-image/include/: InputData.h
app/CApplications/create-ODR-image/src/: InputReader.cpp
app/CApplications/evaluate-energy/: CMakeLists.txt  evaluate-energy.cpp
app/CApplications/export-cplex-lp/: CMakeLists.txt  export-cplex-lp.cpp
app/CApplications/export-cplex-lp/include/: InputData.h  InputReader.h
app/CApplications/export-cplex-lp/src/: InputReader.cpp
app/CApplications/export-cplex-qp/: CMakeLists.txt  export-cplex-qp.cpp
app/CApplications/export-cplex-qp/include/: InputData.h  InputReader.h
app/CApplications/export-cplex-qp/src/: InputReader.cpp
app/CApplications/export-cvxopt/: CMakeLists.txt  export-cvxopt.cpp
app/CApplications/export-cvxopt/include/: InputData.h  InputReader.h
app/CApplications/export-cvxopt/src/: InputReader.cpp  PythonExporter.cpp
app/CApplications/export-grid/: CMakeLists.txt  export-grid.cpp
app/CApplications/export-grid/include/: InputData.h  InputReader.h
app/CApplications/export-grid/src/: InputReader.cpp
app/CApplications/export-third-order/: CMakeLists.txt  export-third-order.cpp
app/CApplications/export-third-order/include/: InputData.h  InputReader.h  PythonExporter.h  PythonExporter.hpp
app/CApplications/export-third-order/src/: InputReader.cpp  PythonExporter.cpp
app/CApplications/generate-shapes/: CMakeLists.txt  generate-shapes.cpp
app/CApplications/generate-solution/: CMakeLists.txt
lab/: CMakeLists.txt  test-levels.cpp  test-lp-creation.cpp  test-serialization.cpp
lab/exp/: CMakeLists.txt  api.py  collect-solutions.sh  exp-sum-sqc.cpp  experiment-cvxopt.py  experiment-lp.py  experiment-qp.py  utils.py
lab/test/: CMakeLists.txt  test-lp-creation.cpp  test-serialization.cpp
lab/test/lp-creation/: CMakeLists.txt  test-lp-creation.cpp
lab/test/objective-value/: CMakeLists.txt  test-objective-value.cpp
lab/test/opt-model/: CMakeLists.txt  test-opt-model.cpp
lab/test/serialization/: CMakeLists.txt  test-serialization.cpp
lab/test/sum-sqc/: CMakeLists.txt  sum-sqc.cpp
modules/constraints/: CMakeLists.txt
modules/constraints/include/LPModel/constraints/: ClosedAndConnected.h
modules/constraints/include/LPModel/constraints/model/: EdgeIncidence.h  LinelIncidence.h  PixelIncidence.h
modules/constraints/src/: ClosedAndConnected.cpp
modules/initialization/: CMakeLists.txt
modules/initialization-linel/: CMakeLists.txt
modules/initialization-linel/include/LPModel/initialization/: API.h  Shapes.h
modules/initialization-linel/include/LPModel/initialization/control/: CEdge.h  CLinel.h  CPixel.h
modules/initialization-linel/include/LPModel/initialization/model/: Edge.h  Grid.h  IVariable.h  Linel.h  Parameters.h  Pixel.h
modules/initialization-linel/src/: API.cpp
modules/initialization-linel/src/control/: CEdge.cpp  CGrid.cpp  CLinel.cpp  CPixel.cpp
modules/initialization/include/LPModel/initialization/: API.h  CData.h  Shapes.h
modules/initialization/include/LPModel/initialization/control/: CEdge.h  CLinel.h  CPixel.h
modules/initialization/include/LPModel/initialization/model/: Edge.h  Grid.h  IVariable.h  Linel.h  Parameters.h  Pixel.h
modules/initialization/src/: API.cpp  Shapes.cpp
modules/initialization/src/control/: CEdge.cpp  CGrid.cpp  CLinel.cpp  CPixel.cpp
modules/lpwriter/: CMakeLists.txt
modules/lpwriter/include/LPModel/lpwriter/: LPWriter.h
modules/lpwriter/src/: LPWriter.cpp
modules/nonlinopt/: CMakeLists.txt  nonlinopt.cpp
modules/nonlinopt/include/LPModel/nonlinopt/: MinimizerAR.h
modules/nonlinopt/src/: Minimizer.cpp  MinimizerAR.cpp
modules/objective/: CMakeLists.txt
modules/objective/src/: Objective.cpp
modules/opt-model/: CMakeLists.txt
modules/opt-model/include/LPModel/opt-model/: OptModel.h  control.h  utils.h
modules/opt-model/src/: control.cpp  utils.cpp
modules/python-exporter/: CMakeLists.txt
modules/python-exporter/include/LPModel/python-exporter/: PythonExporter.h  PythonExporter.hpp
modules/python-exporter/src/: PythonExporter.cpp
modules/solassign/: CMakeLists.txt
modules/solassign/src/: SolutionAssignment.cpp
modules/terms/: CMakeLists.txt
modules/terms-linel/: CMakeLists.txt
modules/terms-linel/include/LPModel/terms/: API.h
modules/terms-linel/include/LPModel/terms/data/: CData.h
modules/terms-linel/src/data/: CData.cpp
modules/terms-linel/src/sqc/: CSqc.cpp
modules/terms-linel/src/sqc/control/: CConstants.cpp  CTerm.cpp
modules/terms/include/LPModel/terms/: API.h
modules/terms/src/: API.cpp
modules/terms/src/data/: CData.cpp
modules/terms/src/sqc/: API.cpp
modules/terms/src/sqc/control/: CConstants.cpp  CPointelContribution.cpp  CTerm.cpp  IteratorManager.cpp
modules/utils/: CMakeLists.txt
modules/utils/include/LPModel/utils/: compUtils.h  dispUtils.h  utils.h
modules/utils/src/: compUtils.cpp  dispUtils.cpp  utils.cpp
(+126 files in other folders)
